--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p style="color: #666; font-size: 0.9em;">Posted on November 20, 2025 by The Mukbangers</p>
 
             <video controls style="width: 100%; max-height: 400px; margin-top: 15px; border-radius: 4px;">
-                <source src="vid.mp4" type="video/mp4">
+                <source src="myvid" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
@@ -57,3 +57,4 @@
 
 </body>
 </html>
+
